fixing theme, animation on language switch

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+<l<link href="https://fonts.googleapis.com/css2?family=rubik:wght@400;700&display=swap" rel="stylesheet">
