--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,1 @@
-body.skin--noirbloom .page__hero--overlay::before {
-  background: red !important;
-}
-
-body.skin--noirbloom .page__hero {
-  border: 4px dashed yellow !important;
-}
-
+/
