refactor: streamline language change animations and styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,8 @@
         {% include_cached footer.html %}
       </footer>
     </div>
+    <script>
+   </script>
    {% include scripts.html %}
   </body>
 </html>
