--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -6,6 +6,10 @@
  * on every page load.
 */
 /*
+ * STEP 1: Forcefully disable any default intro animations on key page elements.
+ * This is the crucial new part. It should stop the animation that happens
+ * on every page load.
+*/
 .masthead,
 .navigation,
 .page,
@@ -16,10 +20,6 @@
   -webkit-animation: none !important;
 }
 
-
-$intro-transition  : none; 
-$global-transition : none;
-*/
 /*
  * STEP 2: Define our desired fade-in animation.
 */
@@ -37,7 +37,7 @@ $global-transition : none;
  * 'page-is-changing-language' class to the body. Because this CSS rule
  * is more specific, it will override the 'animation: none' rule above.
 */
-body.page-is-changing-language .initial-content {
+body.page-is-changing-language #main {
   animation: fadeInOnLangChange 0.5s ease-in forwards !important;
+  -webkit-animation: fadeInOnLangChange 0.5s ease-in forwards !important;
 }
-
