Lang animation fixed !!!!

--- a/_sass/minimal-mistakes/skins/_noirbloom.scss
+++ b/_sass/minimal-mistakes/skins/_noirbloom.scss
@@ -2,8 +2,9 @@
    Noir Bloom skin — Dark mode, media-focused
    ========================================================================== */
 
-// $intro-transition  : none; 
-// $global-transition : none;
+/* Disabling Theme's Default Transitions */
+$intro-transition  : none; 
+$global-transition : none;
 
 /* Fonts */
   
