--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,6 @@
     </div>
     <script src="{{ '/assets/js/lang-fade.js' | relative_url }}"></script> 
     {% include scripts.html %}
-    {% include floating-lang-switcher.html %}
+    {% include fabs.html %}
   </body>
 </html>
