--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       </footer>
     </div>
     <script src="{{ '/assets/js/lang-fade.js' | relative_url }}"></script> 
+    <script src="{{ '/assets/js/fabs-mover.js' | relative_url }}"></script>
     {% include scripts.html %}
-    {% include fabs.html %}
   </body>
 </html>
