lang switch text fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,33 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
     {% if site.data.ui-text[page.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[page.locale].follow_label }}</strong></li>
+    <li><strong>{{ site.data.ui-text[page.locale].follow_label }}</strong></li>
     {% endif %}
-
     {% if site.footer.links %}
-      {% for link in site.footer.links %}
-        {% if link.label and link.url %}
-          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
-        {% endif %}
-      {% endfor %}
+    {% for link in site.footer.links %}
+    {% if link.label and link.url %}
+    <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}"
+          aria-hidden="true"></i> {{ link.label }}</a></li>
+    {% endif %}
+    {% endfor %}
     {% endif %}
 
     {% unless site.atom_feed.hide %}
-      <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[page.locale].feed_label | default: "Feed" }}</a></li>
+    <li><a
+        href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i
+          class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[page.locale].feed_label |
+        default: "Feed" }}</a></li>
     {% endunless %}
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} <a href="{{ site.copyright_url | default: site.url }}">{{ site.copyright | default: site.title }}</a>. {{ site.data.ui-text[page.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} <a
+    href="{{ site.data.config-text[page.locale].copyright_url | default: site.url }}">{{
+    site.data.config-text[page.locale].name | default: site.title }}</a>. {{ site.data.ui-text[page.locale].powered_by |
+  default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">{{
+    site.data.ui-text[page.locale].generator_name | default: "Jekyll" }}</a> &amp; <a
+    href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">{{
+    site.data.ui-text[page.locale].theme_name | default: "Minimal Mistakes" }}</a>.</div>
+
+<a href="/contact/" class="fab-button" aria-label="Contact Us">
+  <i class="fas fa-envelope"></i> </a>
