--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,8 +9,10 @@
             alt="{{ site.masthead_title | default: site.title }}"></a>
         {% endunless %}
         <a class="site-title" href="{{ '/' | relative_url }}">
-          {{ site.masthead_title | default: site.title }}
-          {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
+          {{ site.data.config-text[page.locale].title | default: site.title }}
+          {% if site.data.config-text[page.locale].subtitle %}
+            <span class="site-subtitle">{{ site.data.config-text[page.locale].subtitle }}</span>
+          {% endif %}
         </a>
         {% assign lang = page.locale | default: 'en' %}
         {% assign nav_links = site.data.navigation.main[lang] %}
