final language switcher

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,5 +29,4 @@
     href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">{{
     site.data.ui-text[page.locale].theme_name | default: "Minimal Mistakes" }}</a>.</div>
 
-<a href="/contact/" class="fab-button" aria-label="Contact Us">
-  <i class="fas fa-envelope"></i> </a>
+{% include fab-language-switcher.html %}
