--- a/_sass/minimal-mistakes/_noirbloom-custom.scss
+++ b/_sass/minimal-mistakes/_noirbloom-custom.scss
@@ -114,7 +114,7 @@ body.skin--noirbloom {
         color: inherit;
         font-family: inherit;
         &:hover {
-            color: mix(#fff, $social-icon-color, 30%);
+            color: $link-color-hover;
             text-decoration: none;
         }
     }
