--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -23,7 +23,7 @@
 >
   {% if page.header.overlay_color or page.header.overlay_image %}
     <div class="wrapper">
-      {% unless page.header.no_text_overlay %} <-- Add this line
+      {% unless page.header.no_text_overlay %}
         <h1 id="page-title" class="page__title" itemprop="headline">
           {% if paginator and site.paginate_show_page_num %}
             {{ site.title }}{% unless paginator.page == 1 %} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}
