--- a/_sass/minimal-mistakes/_noirbloom-custom.scss
+++ b/_sass/minimal-mistakes/_noirbloom-custom.scss
@@ -56,7 +56,9 @@ body.skin--noirbloom {
     &__hero, &__hero--overlay {
       padding-top: 8rem;
       position: relative;
+      background-position: top;
       z-index: 1;
+      background-attachment: fixed;
     }
     &__inner-wrap {
       margin-top: 6rem;
@@ -64,7 +66,7 @@ body.skin--noirbloom {
     &__title, &__title a {
       color: map-get($heading-colors, h2);
       font-weight: bold;
-      margin-top: 4em; // Change after mashead height adjustment
+      margin-top: 2em; // Change after mashead height adjustment
     }
     &__lead {
       color: $text-color;
